swagger needs to know which stage it's being deployed to (local/dev/prod) to update its basepath
